[package]
name = "horrorshow"
description = "a templating library written in rust macros"
version = "0.8.3"
authors = ["Steven Allen <steven@stebalien.com>"]
edition = "2018"

documentation = "https://docs.rs/horrorshow"
repository = "https://github.com/Stebalien/horrorshow-rs"
keywords = ["html", "template"]
categories = ["template-engine"]
license = "MIT/Apache-2.0"

[features]
default = ["ops", "std", "alloc"]
alloc = []
ops = []
std = ["alloc"]

[dependencies.rocket]
version = "0.5.0-rc.1"
optional = true
